# loong_ctrl_locomotion

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  readme.md
src/common/: curve.cpp  curve.h  swing_arm.h
src/manager/: fsm.cpp  fsm.h  manager.cpp  nabo.cpp  nabo_data.h  plan.cpp  plan.h
src/plan/: plan_com_test.cpp  plan_com_test.h  plan_recover.cpp  plan_recover.h  plan_rl.cpp  plan_rl.h  plan_sss.cpp  plan_sss.h
src/rl/: onnx.cpp  onnx.h  thread_loop.h  thread_loop.hxx
src/robot/: robot_config.h
test/: main.cpp  main.h
tools/: make.sh  run_mujoco_loco.sh  run_test.sh  update_lib.sh
